# SatScan

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
azure/bicep/: main.bicep
docs/: ai_integration.md  getting_started.md
models/prompts/: explain_finding.txt
src/: cli.py  config.py  reporter.py  sparta_mapper.py
src/ai/: agent.py  explainers.py  ml_anomaly.py  ollama_client.py
src/checks/: __init__.py  anomaly_detector.py  auth_check.py  base.py  crypto_hint.py  engine.py  replay_check.py
src/parser/: __init__.py  ccsds_parser.py  packet_models.py
tests/: conftest.py
tests/unit/: test_ai.py  test_parers.py
