[project]
name = "satscan"
version = "0.2.0"
description = "AI-Enhanced Satellite Telemetry & Link Security Auditor for CCSDS TM/TC (Starshield / NRO)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ben Jiles"}]
keywords = ["satellite", "ccsds", "cybersecurity", "starshield", "spartA", "ollama"]

dependencies = [
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.0",
    "scapy>=2.5",
    "construct>=2.10",
]

[project.optional-dependencies]
ai = ["ollama>=0.4.0", "scikit-learn>=1.3", "numpy"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "weasyprint>=62.0",
]

[project.scripts]
satscan = "src.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
